@@ -4,6 +4,7 @@ Changelog as of December 1, 2011:
 * Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
 * Changed `my_theme_data` to `active_theme_data` to be more descriptive in `BNS Theme Version`
 * Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
+* Removed 'Home" link code from `dmm_list_pages`
 * Updated documentation to clarify `BNS Dynamic Copyright` parameters
 
 /**
